# dj-project-template

./: .dockerignore  .editorconfig  .env  .env.ci  .gitignore  .pre-commit-config.yaml  Dockerfile.ci  Jenkinsfile  Pipfile  README.md  generate_secret_key.py  gunicorn.conf.py  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  setup.cfg  tailwind.config.js
.github/workflows/: ci.yaml
misc/etc/nginx/conf.d/: vh_localhost.conf
misc/etc/nginx/default/: error.html
misc/etc/nginx/templates/: Dockerfile.template  django_sudo.template  gunicorn.service.template  gunicorn.socket.template  vh_django_gunicorn_domain.tld.conf.template  vh_docker_django_gunicorn_domain.tld.conf.template
misc/gunicorn/: gunicorn.service  gunicorn.socket
misc/nginx/default/: error.html
misc/nginx/etc/: nginx.conf
misc/nginx/etc/conf.d/: vh_domain.tld.conf
misc/prod/: django_sudo  nginx.conf
misc/prod/conf.d/: vh_localhost.conf
misc/prod/default.d/: general.conf  letsencrypt.conf  security.conf
misc/prod/logrotate.d/: gunicorn  nginx
misc/scripts/: activate  check_service.sh  docker_build.sh  postactivate  postdeactivate  runner.sh  validate_jenkinsfile.sh
project_name/: asgi.py  backup.py  context_processors.py  hosts.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
requirements/: dev_requirements.txt  requirements.txt
static/CACHE/: manifest.json
static/css/: output.css
templates/: 400.html  401.html  403.html  404.html  500.html  base.html  index.html
