[project]
name = "dj-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1 ; python_full_version >= '3.8'",
    "dj-database-url==2.3.0",
    "dj-email-url==1.0.6",
    "django>=5.1.5",
    "django==5.1.5 ; python_full_version >= '3.10'",
    "django-appconf==1.0.6 ; python_full_version >= '3.7'",
    "django-cache-url==3.4.5",
    "django-cors-headers==4.6.0 ; python_full_version >= '3.9'",
    "django-crontab==0.7.1",
    "django-csp==3.8",
    "django-dbbackup==4.2.1 ; python_full_version >= '3.7'",
    "django-extensions==3.2.3 ; python_full_version >= '3.6'",
    "django-health-check==3.18.3 ; python_full_version >= '3.8'",
    "django-hosts==6.0 ; python_full_version >= '3.8'",
    "django-permissions-policy==4.24.0 ; python_full_version >= '3.9'",
    "django-redis==5.4.0 ; python_full_version >= '3.6'",
    "gunicorn==23.0.0 ; python_full_version >= '3.7'",
    "markdown==3.7 ; python_full_version >= '3.8'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9'",
    "packaging==24.2 ; python_full_version >= '3.8'",
    "pillow==11.1.0 ; python_full_version >= '3.9'",
    "psutil==6.1.1 ; python_full_version >= '2.7'",
    "psycopg2-binary==2.9.10 ; python_full_version >= '3.8'",
    "pygments==2.19.1 ; python_full_version >= '3.8'",
    "pytz==2024.2",
    "rcssmin==1.2.0",
    "redis==5.2.1 ; python_full_version >= '3.8'",
    "rjsmin==1.2.3",
    "sqlparse==0.5.3 ; python_full_version >= '3.8'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.8'",
    "werkzeug==3.1.3 ; python_full_version >= '3.9'",
    "whitenoise==6.8.2 ; python_full_version >= '3.9'",
    "ruff>=0.9.3",
]

[dependency-groups]
dev = [
    "asgiref==3.8.1 ; python_full_version >= '3.8'",
    "cffi==1.17.1 ; python_full_version >= '3.8'",
    "click==8.1.8 ; python_full_version >= '3.7'",
    "cryptography==44.0.0 ; python_full_version >= '3.7'",
    "dj-database-url==2.3.0",
    "dj-email-url==1.0.6",
    "django==5.1.5 ; python_full_version >= '3.10'",
    "django-appconf==1.0.6 ; python_full_version >= '3.7'",
    "django-cache-url==3.4.5",
    "django-cors-headers==4.6.0 ; python_full_version >= '3.9'",
    "django-crontab==0.7.1",
    "django-csp==3.8",
    "django-dbbackup==4.2.1 ; python_full_version >= '3.7'",
    "django-extensions==3.2.3 ; python_full_version >= '3.6'",
    "django-health-check==3.18.3 ; python_full_version >= '3.8'",
    "django-hosts==6.0 ; python_full_version >= '3.8'",
    "django-permissions-policy==4.24.0 ; python_full_version >= '3.9'",
    "django-redis==5.4.0 ; python_full_version >= '3.6'",
    "gunicorn==23.0.0 ; python_full_version >= '3.7'",
    "markdown==3.7 ; python_full_version >= '3.8'",
    "markupsafe==3.0.2 ; python_full_version >= '3.9'",
    "mypy-extensions==1.0.0 ; python_full_version >= '3.5'",
    "packaging==24.2 ; python_full_version >= '3.8'",
    "pathspec==0.12.1 ; python_full_version >= '3.8'",
    "pillow==11.1.0 ; python_full_version >= '3.9'",
    "platformdirs==4.3.6 ; python_full_version >= '3.8'",
    "psutil==6.1.1 ; python_full_version >= '2.7'",
    "psycopg2-binary==2.9.10 ; python_full_version >= '3.8'",
    "pycparser==2.22 ; python_full_version >= '3.8'",
    "pygments==2.19.1 ; python_full_version >= '3.8'",
    "pyopenssl==25.0.0 ; python_full_version >= '3.7'",
    "pytz==2024.2",
    "rcssmin==1.2.0",
    "redis==5.2.1 ; python_full_version >= '3.8'",
    "rjsmin==1.2.3",
    "sqlparse==0.5.3 ; python_full_version >= '3.8'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.8'",
    "werkzeug==3.1.3 ; python_full_version >= '3.9'",
    "whitenoise==6.8.2 ; python_full_version >= '3.9'",
]
